  from Peter Palfrader.
* New settings `ssh-known-hosts` (for choosing which file to check for 
  known host keys), `strict-ssh-host-keys` (for disallowing unknown host
  keys), and `ssh-key` (for choosing which key file to use for SSH 
  connections) allow better and safer use of ssh.
* Checkpoints will now happen even in the middle of files (but between
  chunks).

BUG FIXES:

* `obnam ls` now shows the correct timestamps for generations.
  Thanks, Anders Wirzenius.

Version 0.24.1, released 2011-12-24; a BETA release
-------------------------------------------------

BUG FIX:

* Fix test case for file timestamps with sub-second resolution. Not all
  filesystems have that, so the test case has been changed to accept lack
  of sub-second timestamps.

Version 0.24, released 2011-12-18; a BETA release
-------------------------------------------------

USER VISIBLE CHANGES

* The way file timestamps (modification and access times) have changed,
  to fix inaccuracies introduced by the old way. Times are now stored
  as two integers giving full seconds and nanoseconds past the full
  second, instead of the weird earlier system that was imposed by Python's
  use of floating point for the timestamps. This causes the repository
  format version to be bumped, resulting in a need to start over with an
  empty repository.
* Extended file attributes are now backed up from and restored to local
  filesystems. They are neither backed up, nor restored for live data
  accessed over SFTP.
* If the `--exclude` regular expression is wrong, Obnam now gives an
  error message and then ignores the regexp, rather than crashing.
* There is now a compression plugin, enabled with `--compress-with=gzip`.
* De-duplication mode can now be chosen by the user: the new 
  `--deduplicate` setting can be one of `never` (fast, but uses more space); 
  `verify` (slow, but handles hash collisions gracefully); and
  `fatalist` (fast, but lossy, if there is a hash collision). `fatalist`